5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1649_869.log
== TEST (2019-04-16 14:36:50) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200)
   x=preco-preco*0.5
	print(round(x,2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 2
    if(preco>=200)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:36:56) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.5
	print(round(x,2))
else:
	print(round(preco,2))
-- ERROR:
File "XXXX", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:39:14) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))  

-- ERROR:
File "XXXX", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:39:14) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))  

-- ERROR:
File "XXXX", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:39:15) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))  

-- EXECUTION TIME:
0.160888
-- ERROR:
  File "/home/codebench/codes/1649/869/main.py", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:39:15) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))  

-- EXECUTION TIME:
0.183992
-- ERROR:
  File "/home/codebench/codes/1649/869/main.py", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:39:22) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
   x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))  

-- ERROR:
File "XXXX", line 4
    print(round(x,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:41:11) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:41:34) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- EXECUTION TIME:
0.186605
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:06) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:06) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:06) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:42:10) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- EXECUTION TIME:
0.157341
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:22) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:42:23) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- EXECUTION TIME:
0.16384
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:34) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:42:35) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- EXECUTION TIME:
0.170536
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:47) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,21))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:42:55) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,2))
else:
	prrint(round(preco,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:42:57) 
-- CODE:
preco=float(input("digite o preco sem descontos:  "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,2))
else:
	prrint(round(preco,2))
-- EXECUTION TIME:
0.131864
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
